[package]
name = "znet"
version = "0.2.2"
edition = "2021"
description = "network framework powered by zenoh"
readme = "README.md"
repository = "https://github.com/prime-rs/znet"
license = "Apache-2.0"
authors = ["JLer <jlerxky@live.com>"]
categories = ["network-programming"]
keywords = ["network", "event-bus", "zenoh"]


[dependencies]
color-eyre = "0.6"
flume = "0.11"
indexmap = "2.2"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
zenoh = { version = "1.0.0-alpha.5", default-features = false, features = [
    "unstable",
    "transport_quic",
    "transport_tls",
    "transport_udp",
    "transport_tcp",
] }
zenoh-ext = "1.0.0-alpha.5"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
common_x = { version = "0.5", default-features = false, features = [
    "config",
    "graceful",
    "log",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
# missing_debug_implementations = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
